assets/css/main.css
/* ... */
	
	#contact-banner h3 {
		color: #fff;
		/*margin-right: 10%; use if aligning banner to right*/
	}
	
	#emerg-banner {
		text-align: center;
		background-image: linear-gradient(to right, #ff6200, #f27f2c);
		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
		padding: 0;
		margin-bottom: 2em;
	
	}
	
	#emerg-banner h2 {
		color: #fff;
		/*margin-right: 10%; use if aligning banner to right*/
	}
	
	#features-wrapper {
		padding: 3em 0 3em 0;
	}

	#main-wrapper {
		background: #fff;
		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
		padding: 1.5em 0 1.5em 0;
	}

	#footer-wrapper {
		padding: 2em 0 2em 0;
	}

/* Header */

	#header {
		position: relative;
	}

/* Logo */

	#logo {
		display: inline-block;
	}

		#logo img {
			height: 175px;
			/*this i pulled up from the logo h1 below*/
			background: #fff;
			color: #fff;
			border-radius: 6px;
			font-family: 'Oleo Script', serif;
			font-weight: 400;
			padding: 0.25em 0.2em 0.25em 0.2em;
			font-size: 3.25em;
			letter-spacing: 0.05em;
			display: inline-block;
			vertical-align: middle;
		}
		

		/*#logo h1 {
			
		}*/


/* Nav */

	#nav {
		position: absolute;
		right: 0;
		bottom: 1.5em;
		font-size: 0.9em;
	}

		#nav ul {
			list-style: none;
			padding-left: 0;
		}

			#nav ul li {
				float: left;
				line-height: 4.5em;
				padding-left: 1.5em;
			}

				#nav ul li a, #nav ul li span {
					-moz-transition: background-color .25s ease-in-out;
					-webkit-transition: background-color .25s ease-in-out;
					-ms-transition: background-color .25s ease-in-out;
					transition: background-color .25s ease-in-out;
					font-weight: 800;
					letter-spacing: 0.025em;
					color: #696969;
					text-decoration: none;
					border-radius: 6px;
					padding: 0.5em 1em 0.5em 1em;
				}

				#nav ul li > ul {
					display: none;
				}

				#nav ul li:hover a, #nav ul li:hover span {
					background: #fff;
				}

				#nav ul li.active a, #nav ul li.active span {
					background: #fff;
				}

				#nav ul li.current a {
					background: #444;
					color: #fff;
				}

	.dropotron {
		background: #fff;
		letter-spacing: 0.025em;
		color: #696969;
		text-decoration: none;
		border-radius: 6px;
		padding: 0.75em 0;
		min-width: 15em;
		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1), 0 0.25em 0.25em 0.1em rgba(0, 0, 0, 0.025);
		margin-top: calc(-0.75em + 1px);
		margin-left: -1px;
		list-style: none;
		padding-left: 0;
	}

		.dropotron li {
			border-top: solid 1px #eee;
			line-height: 3em;
			padding-left: 0;
		}

			.dropotron li:first-child {
				border-top: 0;
			}

			.dropotron li > a, .dropotron li > span {
				-moz-transition: color .25s ease-in-out, background-color .25s ease-in-out;
				-webkit-transition: color .25s ease-in-out, background-color .25s ease-in-out;
				-ms-transition: color .25s ease-in-out, background-color .25s ease-in-out;
				transition: color .25s ease-in-out, background-color .25s ease-in-out;
				text-decoration: none;
				color: inherit;
				display: block;
				padding: 0 1.5em;
			}

				.dropotron li > a:hover, .dropotron li > span:hover {
					background: #eee;
				}

			.dropotron li.active > a, .dropotron li.active > span {
				background: #eee;
			}

		.dropotron.level-0 {
			font-size: 0.8em;
			margin-left: 1.5em;
			margin-top: 0;
		}

			.dropotron.level-0:before {
				content: '';
				position: absolute;
				top: -0.5em;
				left: 1em;
				border-bottom: solid 0.75em #ffffff;
				border-left: solid 0.75em transparent;
				border-right: solid 0.75em transparent;
				z-index: 1;
			}

/* Banner */

	#banner {
		position: relative;
		padding: 0;
		margin-bottom: 2em;
		height: 300px;
		display: flex;
    	justify-content: center;
    	align-items: center;
    	overflow: hidden
		}

		#banner h2 {
			font-size: 3.5em;
			margin: 0.1em 0 0.35em 0;
		}

		#banner p {
			font-size: 2.75em;
			line-height: 1.35em;
			margin: 0;
		}

		#banner img {
		  	flex-shrink: 0;
		  	max-width: 100%;
    		background-size: cover;
		}


/* Footer */

	#footer {
		margin-top: 0;
	}

		#footer a {
			color: inherit;
		}

	#copyright {
		color: #aaa;
		padding: 1em 0 0 0;
		text-align: center;
	}

		#copyright a {
			color: inherit;
		}

/* XLarge */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 14pt;
			}

	}

/* Large */

	@media screen and (max-width: 1280px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 11pt;
			}

	}

/* Medium */

	#navPanel, #navToggle {
		display: none;
	}
/* ... */

